--- a/templates/info.html
+++ b/templates/info.html
@@ -11,7 +11,7 @@
 </p>
 <h2>Links to other UFO resources!</h2>
 <ul>
-<li><href="https://www.axios.com/2024/02/08/ufo-uap-sightings-us-hotspots-2000-2023"></li>
-<li><href="https://en.wikipedia.org/wiki/List_of_reported_UFO_sightings"></li>
+<li><a href="https://www.axios.com/2024/02/08/ufo-uap-sightings-us-hotspots-2000-2023">Website #1</a></li>
+<li><a href="https://en.wikipedia.org/wiki/List_of_reported_UFO_sightings">Website #2</a></li>
 </ul>
 {% endblock %}
