--- a/templates/info.html
+++ b/templates/info.html
@@ -1,3 +1,4 @@
+
 {% extends "layout.html" %}
 
 {% set active_page = "about" %}
@@ -7,11 +8,17 @@
 {% block heading %}About the UFO Data{% endblock %}
 
 {% block body %}
-  <p>The data used in this web app is from the CORGIS Dataset Project and can be found here! The data contains information about recorded UFO sightings and their location, time frame, and shape. It's important to note that the sightings were self-reported, meaning the data could be muddled or inaccurate. The most common UFO shapes reported are orb, triangle,other, fireball, disc, egg, cigar, changing, rectangle and diamond.
+<p>The data used in this web app is from the CORGIS Dataset Project and can be found here! The data contains information about recorded UFO sightings and their location, time frame, and shape. It's important to note that the sightings were self-reported, meaning the data could be muddled or inaccurate. The most common UFO shapes reported are orb, triangle,other, fireball, disc, egg, cigar, changing, rectangle and diamond.
 </p>
+<p>UFO stands for 'Unidentified Flying Object' and 1 in 10 people are believed to have seen one.</p>
+<p>The data used for this project is from
 <h2>Links to other UFO resources!</h2>
 <ul>
-<li><a href="https://www.axios.com/2024/02/08/ufo-uap-sightings-us-hotspots-2000-2023">Website #1</a></li>
-<li><a href="https://en.wikipedia.org/wiki/List_of_reported_UFO_sightings">Website #2</a></li>
+<li><a href="https://www.axios.com/2024/02/08/ufo-uap-sightings-us-hotspots-2000-2023">UFO Hotspots</a></li>
+<li><a href="https://en.wikipedia.org/wiki/List_of_reported_UFO_sightings">Most Common UFO Shapes</a></li>
+<li><a href="https://thehill.com/homenews/space/4131768-the-truth-is-out-there-more-americans-believe-in-ufos/#:~:text=An%20Ipsos%20poll%2C%20released%20on,claims%20to%20have%20seen%20one.">UFO Sighting Statistics</a></li>
 </ul>
+
+<p>Created by Lucy Kronberg, data sourced from CORGIS</p>
+
 {% endblock %}
