--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,35 +1,38 @@
+
+
 {% extends "layout.html" %}
 
 {% set active_page = "location" %}
 
-{% block title %}About the Data{% endblock %}
+{% block title %}Reported Sightings over Time{% endblock %}
 
-{% block heading %}About the UFO Data{% endblock %}
+{% block heading %}Reported Sightings over Time:{% endblock %}
 
 {% block body %}
-<h2>Timeline of Reported Sightings</h2>
 <script>
 	window.onload = function() {
 	 
 	var chart = new CanvasJS.Chart("chartContainer", {
 		animationEnabled: true,
 		axisX: {
-			title: "Years"
-			interval: 20,
+			title: "Years",
+			interval: 10,
+			valueFormatString: "####",
+			minimum: "1920",
+			maximum: "2016"
 		},
 		axisY: {
 			title: "Reported Sightings",
-			suffix: "%",
-			includeZero: true
+			includeZero: true,
+			minimum: 0
 		},
 		data: [{
 			type: "line",
 			name: "CPU Utilization",
 			connectNullData: true,
 			//nullDataLineDashType: "solid",
-			xValueType: "dateTime",
-			xValueFormatString: "DD MMM hh:mm TT",
-			yValueFormatString: "#,##0.##\"%\"",
+			xValueFormatString: "####",
+			yValueFormatString: "#,##0.##",
 			dataPoints: {{ dataPoints }}
 		}]
 		
@@ -38,7 +41,7 @@
 	 
 	}                  
 </script>	 
-<div id="chartContainer" style="height: 500px; width: 50%;"></div>
+<div id="chartContainer" style="height: 500px; width: 100%;"></div>
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 {% endblock %}
 
